# HFT-Project

./: CMakeLists.txt  LICENSE  README.md  api_credentials.h  benchmark.cpp  benchmark.h  benchmark_test.cpp  benchmark_tool.cpp  config.example.json  config.json  config.json.example  config.json.template  config.template.json  config_loader.cpp  config_loader.h  config_manager.cpp  config_manager.h  deribit_client.cpp  deribit_client.h  deribit_trader.cpp  error_handler.cpp  error_handler.h  latency_module.cpp  latency_module.h  latency_module_test.cpp  main.cpp  market_data_manager.cpp  market_data_manager.h  market_data_types.h  performance_dashboard.cpp  performance_dashboard.h  performance_dashboard_test.cpp  performance_monitor.cpp  performance_monitor.h  risk_manager.cpp  risk_manager.h  strategy_manager.cpp  strategy_manager.h  websocket_server.cpp  websocket_server.h  (+1 more)
examples/: README.md  basic_trading.cpp
